[workspace.package]
version = "0.1.0"
authors = ["Kevin Wang <wy721@qq.com>", "Leechael <Leechael@github.com>"]
edition = "2021"
license = "MIT"

[workspace]
members = [
    "kms",
    "kms/rpc",
    "ra-rpc",
    "ra-tls",
    "tdx-attest-sys",
    "tdx-attest",
    "tdxctl",
    "iohash",
    "tappd",
    "tappd/rpc",
    "teepod",
    "teepod/rpc",
    "tproxy",
    "tproxy/rpc",
    "certgen",
    "certbot",
    "certbot/cli",
    "ct_monitor",
    "cc-eventlog",
    "supervisor",
    "supervisor/client",
]
resolver = "2"
