[package]
name = "certbot"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bon.workspace = true
enum_dispatch.workspace = true
fs-err.workspace = true
hickory-resolver.workspace = true
instant-acme.workspace = true
path-absolutize.workspace = true
rcgen.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
x509-parser.workspace = true

[dev-dependencies]
rand.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
