[package]
name = "ct_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
hex_fmt = "0.3.0"
regex = "1.11.0"
reqwest = { version = "0.12.8", default-features = false, features = ["json", "rustls-tls", "charset", "hickory-dns"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tproxy-rpc = { version = "0.1.0", path = "../tproxy/rpc" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
x509-parser = "0.16.0"

[dependencies.ra-rpc]
version = "0.1.0"
path = "../ra-rpc"
default-features = false
features = ["client"]
