[package]
name = "dstack-mr"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "A CLI tool for calculating TDX measurements for DStack images"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde-human-bytes.workspace = true
hex.workspace = true
thiserror.workspace = true
sha2.workspace = true
anyhow.workspace = true
object.workspace = true
hex-literal.workspace = true
fs-err.workspace = true
bon.workspace = true
