[package]
name = "dstack-guest-agent"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rocket.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
fs-err.workspace = true
rcgen.workspace = true
sha2.workspace = true
clap.workspace = true
tokio.workspace = true
hex.workspace = true
serde_json.workspace = true
bollard.workspace = true
chrono.workspace = true
base64.workspace = true
rinja.workspace = true
git-version.workspace = true
ra-rpc = { workspace = true, features = ["client", "rocket"] }
dstack-guest-agent-rpc.workspace = true
ra-tls.workspace = true
tdx-attest.workspace = true
guest-api = { workspace = true, features = ["client"] }
host-api = { workspace = true, features = ["client"] }
sysinfo.workspace = true
default-net.workspace = true
rocket-vsock-listener.workspace = true
sd-notify.workspace = true
reqwest.workspace = true
cmd_lib.workspace = true
figment = { workspace = true, features = ["json", "toml"] }
load_config.workspace = true
k256 = { workspace = true, features = ["ecdsa"] }
dstack-types.workspace = true
sha3.workspace = true
strip-ansi-escapes.workspace = true
cert-client.workspace = true
ring.workspace = true
