[package]
name = "load_config"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
figment = { workspace = true, features = ["json", "toml"] }
rocket.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
