[package]
name = "ra-rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.88"
prpc = "0.3.0"
ra-tls = { version = "0.1.0", path = "../ra-tls" }
rocket = { git = "https://github.com/rwf2/Rocket", branch = "master", features = ["mtls"], optional = true }
serde_json = "1.0.128"
tracing = "0.1.40"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "charset"], optional = true }

[features]
default = ["rocket", "client"]
rocket = ["dep:rocket"]
client = ["reqwest"]
