[package]
name = "ra-tls"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
bon = "2.2.1"
dcap-qvl = "0.1.2"
elliptic-curve = { version = "0.13.8", features = ["pkcs8"] }
fs-err = "2.11.0"
hkdf = "0.12.4"
p256 = "0.13.2"
rcgen = { version = "0.13.1", features = ["x509-parser"] }
ring = "0.17.8"
rustls-pki-types = "1.8.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
x509-parser = "0.16.0"
yasna = "0.5.2"
