[package]
name = "ra-tls"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.88"
bon = "3.0.2"
dcap-qvl = "0.1.6"
elliptic-curve = { version = "0.13.8", features = ["pkcs8"] }
fs-err = "3.0.0"
hex = "0.4.3"
hkdf = "0.12.4"
p256 = "0.13.2"
rcgen = { version = "0.13.1", features = ["x509-parser"] }
ring = "0.17.8"
rustls-pki-types = "1.8.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
x509-parser = "0.16.0"
yasna = "0.5.2"
tracing = "0.1.40"
cc-eventlog = { version = "0.1.0", path = "../cc-eventlog" }
sha3 = "0.10.8"
