[package]
name = "sodiumbox"
version = "0.1.0"
edition = "2021"
description = "Pure Rust implementation of libsodium's sealed box encryption"
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
x25519-dalek.workspace = true
xsalsa20poly1305.workspace = true
salsa20.workspace = true
rand_core.workspace = true
blake2.workspace = true
