[package]
name = "supervisor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bon.workspace = true
clap = { workspace = true, features = ["derive", "string"] }
dashmap.workspace = true
fs-err.workspace = true
git-version.workspace = true
libc.workspace = true
load_config.workspace = true
nix.workspace = true
notify.workspace = true
rocket = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "sync", "macros", "rt-multi-thread", "io-util"] }
tracing.workspace = true
tracing-subscriber.workspace = true
