[package]
name = "tappd"
version = "0.1.0"
edition = "2021"

[dependencies]
ra-rpc = { version = "0.1.0", path = "../ra-rpc" }
tappd-rpc = { version = "0.1.0", path = "../tappd-rpc" }
rocket = { git = "https://github.com/rwf2/Rocket", branch = "master", features = ["mtls"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"] }
ra-tls = { version = "0.1.0", path = "../ra-tls" }
fs-err = "2.11.0"
rcgen = { version = "0.13.1", features = ["x509-parser", "pem"] }
tdx-attest = { version = "0.1.0", path = "../tdx-attest" }
sha2 = "0.10.8"
