[package]
name = "tappd"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rocket = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
fs-err = { workspace = true }
rcgen = { workspace = true }
sha2 = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
bollard = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
rinja = { workspace = true }
git-version = { workspace = true }

ra-rpc = { workspace = true, features = ["rocket"] }
tappd-rpc = { workspace = true }
ra-tls = { workspace = true }
tdx-attest = { workspace = true }
sysinfo = "0.33.0"
