[package]
name = "tdxctl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.17", features = ["derive"] }
fs-err = "2.11.0"
hex = "0.4.3"
hex_fmt = "0.3.0"
ra-tls = { version = "0.1.0", path = "../ra-tls" }
scale = { version = "3.6.12", package = "parity-scale-codec", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tdx-attest = { path = "../tdx-attest" }
