[package]
name = "tdxctl"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.86"
clap = { version = "4.5.21", features = ["derive"] }
curve25519-dalek = "4.1.3"
fs-err = "3.0.0"
getrandom = "0.2.15"
hex = "0.4.3"
hex_fmt = "0.3.0"
ra-tls = { version = "0.1.0", path = "../ra-tls" }
regex = "1.11.1"
scale = { version = "3.6.12", package = "parity-scale-codec", features = ["derive"] }
schnorrkel = "0.11.4"
serde = { version = "1.0.210", features = ["derive"] }
serde-human-bytes = "0.1.0"
serde_json = "1.0.128"
sha2 = "0.10.8"
tdx-attest = { path = "../tdx-attest" }
tproxy-rpc = { version = "0.1.0", path = "../tproxy/rpc" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[dev-dependencies]
rand = "0.8.5"
