[package]
name = "teepod"
version = "0.1.0"
edition = "2021"

[dependencies]
ra-rpc = { version = "0.1.0", path = "../ra-rpc" }
teepod-rpc = { version = "0.1.0", path = "./rpc" }
rocket = { git = "https://github.com/rwf2/Rocket", branch = "master", features = ["mtls"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
shared_child = "1.0.1"
bon = "2.3.0"
uuid = { version = "1.10.0", features = ["v4"] }
sha2 = "0.10.8"
hex = "0.4.3"
fs-err = "3.0.0"
dirs = "5.0.1"
which = "6.0.3"
clap = { version = "4.5.18", features = ["derive"] }
humantime = "2.1.0"
linemux = "0.3.0"
