[package]
name = "tproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
ra-rpc = { version = "0.1.0", path = "../ra-rpc" }
tproxy-rpc = { version = "0.1.0", path = "./rpc" }
rocket = { git = "https://github.com/rwf2/Rocket", branch = "master", features = ["mtls"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"] }
ipnet = { version = "2.10.0", features = ["serde"] }
fs-err = "2.11.0"
clap = { version = "4.5.18", features = ["derive"] }
shared_child = "1.0.1"
rproxy = { git = "https://github.com/kvinwang/rproxy.git", branch = "tproxy", version = "0.1.0" }
tokio = { version = "1.40.0", features = ["full"] }
rustls = { version = "0.23.13", features = ["ring"] }
rinja = "0.3.4"

[dev-dependencies]
insta = "1.40.0"
